# EchoChain

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
config/: config.yaml
dashboards/: DAX_Measures.dax  POWER_BI_SPECIFICATION.md  echochain_theme.json
data/raw/: manufacturing_bom.csv
datasets/: generate_datasets.py
datasets/sample_data/: warranty_claims.csv
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  spark-defaults.conf
docs/: ARCHITECTURE.md  BUSINESS_KPIS.md  DATA_DICTIONARY.md  DEPLOYMENT_GUIDE.md  ER_DIAGRAM.md  POWERBI_GUIDE.md  PROJECT_REPORT.md  WORKFLOW.md
notebooks/: 01_eda_and_data_discovery.ipynb  02_delta_lakehouse_pipeline.ipynb  03_circular_analytics_deepdive.ipynb
pyspark_pipeline/: __init__.py  bronze_ingestion.py  config.py  fuzzy_matching.py  gold_metrics.py  run_pipeline.py  silver_cleaning.py  spark_session.py
scrapy_project/: scrapy.cfg
scrapy_project/echo_scraper/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
scrapy_project/echo_scraper/spiders/: backmarket_spider.py  base_spider.py  ebay_spider.py  facebook_spider.py  olx_spider.py
scripts/: generate_png_screenshots.py  generate_screenshots.py  run_daily_pipeline.py
tests/: __init__.py  conftest.py  run_tests.py  test_data_generator.py  test_data_quality.py  test_pyspark_pipeline.py  test_scrapers.py
